2008-03-20  Neil Williams  <linux@codehelp.co.uk>

	* backend/file/qsf-backend.c: Add include for
	the now private kvputil-p.h header.
	* backend/sqlite/qof-sqlite.c (build_kvp_table),
	(qsql_class_foreach): Switch to qof_sql_object_create_table
	because no entity exists when the tables need to be created.
	Allow more room for indices by using a gulong instead of glong.
	* qof/qof.h: Remove the private header kvputil-p.h
	(public functions already moved to kvputil.h)
	* qof/qofsql.c (string_param_to_sql),
	(qof_sql_entity_insert), (qof_sql_entity_update_kvp): Doxygen
	tweaks.
	qof/qofsql.c (qof_sql_entity_create_table) : Add assertion
	if a NULL entity is passed. Prevent double free by only
	freeing data.str if KVP slots exist.

	* backend/gda/qof-gda.c: (create_tables), (create_data_source),
	(qgda_session_begin), (qgda_class_foreach), (qgda_check_entity),
	(qgda_write_foreach), (qgda_write_db), (qgda_session_end),
	(qgda_destroy_backend), (qgda_backend_new): Add prototype
	data write handlers.

2008-03-19  Neil Williams  <linux@codehelp.co.uk>

	* qof.symbols.in: Add qof_sql_entity_set_kvp_exists
	* qof/qofsql-p.h: New function, qof_sql_entity_set_kvp_exists
	* qof/qofsql.c (create_sql_from_param_cb), (string_param_to_sql),
	(string_param_foreach), (kvpvalue_to_sql_insert),
	(kvpvalue_to_sql_update), (qof_sql_entity_insert),
	(qof_sql_entity_update), (qof_sql_entity_update_kvp),
	(qof_sql_entity_set_kvp_tablename), (qof_sql_entity_set_kvp_id),
	(qof_sql_entity_get_kvp_id), (qof_sql_entity_set_kvp_exists):
	Fixing update mechanisms and separating KVP management into
	new functions so that parameters can be updated individually.
	* qof/test/test-sql.c (test_sql), (main): Adapt to improved
	UPDATE support. Add some randomization.

2008-03-18  Neil Williams  <linux@codehelp.co.uk>

  * backend/gda/qof-gda.c (qgda_modify), (create_tables),
  (create_data_source), (qgda_session_begin), (qgda_session_end),
  (get_config), (qgda_backend_new): Continue migration to SQL