@@ -13,7 +13,9 @@
 <li><a href="#intro">Introduction</a></li>
 <li><a href="http://sourceforge.net/projects/qof/">SourceForge</a></li>
 <li><a href="http://qof.cvs.sourceforge.net/qof/">CVS</a></li>
-<li><a href="#docs">Documentation</a></li>
+<li><a href="#docs">Documentation</a>
+<ul><li><a href="start.html">Starting with QOF</a></li></ul>
+</li>
 <li><a href="#download">Downloads</a></li>
 <li><a href="hacking.html">Packaging</a></li>
 <li><a href="hacking.html#roadmap">Roadmap</a></li>
